tests/baselines/reference/tsxErrorRecovery1.errors.txt
file.tsx(4,10): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file.tsx(4,19): error TS1109: Expression expected.
file.tsx(4,19): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== file.tsx (3 errors) ====
    declare namespace JSX { interface Element { } }
    
    function foo() {
    	var x = <div>  { </div>
    	        ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    	                 ~~
!!! error TS1109: Expression expected.
    	                 ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    }
    // Shouldn't see any errors down here
    var y = { a: 1 };
    